2014-10-07  Glenn Morris  <rgm@gnu.org>

	* Makefile.in ($(srcdir)/macuvs.h)
	($(lispsource)/international/charprop.el): Add explicit FORCE.

2014-10-07  Eli Zaretskii  <eliz@gnu.org>

	* decompress.c (init_zlib_functions): Move the message about zlib
	being unavailable from here...
	(Fzlib_decompress_region): ...to here.  (Bug#18650)

2014-10-07  Dmitry Antipov  <dmantipov@yandex.ru>

	* font.c (Ffont_get_glyphs): Use validate_subarray and fix
	the case where an optional string is used.  Adjust docstring.

2014-10-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* lisp.mk (lisp): Remove w32-common-fns.elc.

2014-10-05  Paul Eggert  <eggert@cs.ucla.edu>

	* keyboard.c (Qleft, Qright): Remove duplicate definitions (Bug#9927).
	These were already defined in buffer.c, and the duplicate
	definitions cause problems on platforms like 'gcc -fno-common'.
	Reported by Peter Dyballa in: http://bugs.gnu.org/9927#137

2014-10-05  Jan Djärv  <jan.h.d@swipnet.se>

	* nsterm.m (updateFrameSize:): Only call update_frame_tool_bar
	if toolbar is visible.

	* nsfont.m (nsfont_draw): Use CGFloat for GNUstep newer than
	0.23 (Bug#18030).

	* nsterm.m (syms_of_nsterm): ns-use-fullscreen-animation is new.
	(toggleFullScreen:): Use ns-use-fullscreen-animation for animate.
	(ns_select, ns_read_socket): Use unwind_protect to decrease
	apploopnr (Bug#18345).
	(ns_draw_window_cursor): Adjust y for hbar cursor only if smaller than
	line height (Bug#17977).

	* macfont.m: Fix indentation and import changes from macport 24.3.94.
	(macfont_closest_traits_index): New function.
	(macfont_closest_traits_index_p): Rename from
	macfont_closest_traits_index.
	(macfont_list): Use macfont_closest_traits_index_p.

2014-10-05  K. Handa  <handa@gnu.org>

	* coding.c (detect_coding_iso_2022): Set coding->rejected
	correctly when an invalid escape sequence is found (Bug#18610).

2014-10-04  Jan Djärv  <jan.h.d@swipnet.se>

	* gtkutil.c (create_menus): Only add tearoffs to empty menus.